--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </div>
 
     <div class="content">
-        <h1 class="greetings">Hello User!</h1>
-        <div class="abt-me">
-            <br>
+        <h1 class="greetings">Hello!</h1>
+        <h3 class="subgreetings">Im Daymian</h3>
+        <br>
+        <div class="page">
             <div class="miniStuff">
                 <h1 class="miniIntro">A Mini Introduction</h1>
                 <p class="miniText">Hi, I'm Daymian J. Madrigal Vasquez, a passionate web developer with a knack for
@@ -44,10 +45,16 @@
                     what's possible on the web.</p>
                 <p class="miniText">Please, do take a look around my website, you may find some cool little secrets.</p>
             </div>
+            <div class="buttons pointer-hover">
+                <a class="button">About Me</a>
+                <a class="button">Projects</a>
+
+            </div>
         </div>
     </div>
-    <script src="orbs.js"></script>
-    <script src="cursor.js"></script>
+    <script src="/scripts/cursor.js"></script>
+    <script src="/scripts/orbs.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
