--- a/index.html
+++ b/index.html
@@ -38,23 +38,61 @@
         <br>
         <div class="page">
             <div class="miniStuff">
-                <h1 class="miniIntro">A Mini Introduction</h1>
+                <div class="miniIntro">
+                    <h1>A Mini Introduction</h1>
+                    <img src="/imgs/djCrownOfThorns.png" alt="Logo Crown of Thorns" class="djCrownOfThorns">
+                </div>
                 <p class="miniText">Hi, I'm Daymian J. Madrigal Vasquez, a passionate web developer with a knack for
                     creating interactive and
-                    visually stunning web applications. I love exploring new technologies and pushing the boundaries of
+                    visually stunning web applications. I am a <span id="age"></span> year old web developer. I am located in California,
+                    USA. Don’t feel bad for me, I'm doing okay! I hope you like my site! I love exploring new
+                    technologies and pushing the boundaries of
                     what's possible on the web.</p>
                 <p class="miniText">Please, do take a look around my website, you may find some cool little secrets.</p>
             </div>
-            <div class="buttons pointer-hover">
-                <a class="button">About Me</a>
-                <a class="button">Projects</a>
+            <div class="buttons">
+                <a class="button pointer-hover">About Me</a>
+                <a class="button pointer-hover">Projects</a>
+            </div>
+            <div class="SiteVersionCenter">
+                <div class="siteVersion">
+                    <div class="siteVersionText">
+                        <div class="siteVersionHeader">
+                            <h1>Site Updates</h1>
+                            <p class="version">version 1</p>
+                        </div>
+                        <p>Site has gone public! What you're seeing is version one</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footerRow">
+                <h3>Contact</h3>
+                <p>Email: business@daymian.xyz</p>
+            </div>
+            <div class="footerRow">
+                <h3>Portfolio</h3>
+                <p class="portfolioLink"><a class="pointer-hover" href="https://twitter.com/daymianjmv" target="_blank">Twitter</a></p>
+                <p class="portfolioLink"><a class="pointer-hover" href="https://github.com/daymianjmv" target="_blank">GitHub</a></p>
+            </div>
+            <div class="footerRow">
+                <h3>About Me</h3>
+                <p>Website designed and developed by Daymian JMV</p>
+                <p>© 2023 Daymian JMV. All rights reserved.</p>
+            </div>
 
+            <div class="footerRow socials">
+                <a class="pointer-hover" href="https://www.daymian.xyz"><img src="/imgs/icons/globe.svg"></a>
+                <a class="pointer-hover" href="https://github.com/daymianjmv"><img src="/imgs/icons/github.svg"></a>
             </div>
         </div>
     </div>
     <script src="/scripts/cursor.js"></script>
     <script src="/scripts/orbs.js"></script>
     <script src="/scripts/script.js"></script>
+    <script src="/scripts/age.js"></script>
+    <script src="/scripts/greetings.js"></script>
 </body>
 
 </html>
