--- a/index.html
+++ b/index.html
@@ -33,58 +33,73 @@
     </div>
 
     <div class="content">
-        <h1 class="greetings">Hello!</h1>
-        <h3 class="subgreetings">Im Daymian</h3>
+        <h1 class="greetings light-bg-hover">Hello!</h1>
+        <h3 class="subgreetings light-bg-hover">Im Daymian</h3>
         <br>
         <div class="page">
             <div class="miniStuff">
                 <div class="miniIntro">
-                    <h1>A Mini Introduction</h1>
+                    <h1 class="light-bg-hover">A Mini Introduction</h1>
                     <img src="/imgs/djCrownOfThorns.png" alt="Logo Crown of Thorns" class="djCrownOfThorns">
                 </div>
-                <p class="miniText">Hi, I'm Daymian J. Madrigal Vasquez, a passionate web developer with a knack for
-                    creating interactive and
-                    visually stunning web applications. I am a <span id="age"></span> year old web developer. I am located in California,
-                    USA. Don’t feel bad for me, I'm doing okay! I hope you like my site! I love exploring new
-                    technologies and pushing the boundaries of
-                    what's possible on the web.</p>
-                <p class="miniText">Please, do take a look around my website, you may find some cool little secrets.</p>
+                <p class="miniText">Hi there! I’m Daymian J. Madrigal Vasquez — a web developer with a passion for
+                    crafting interactive, visually engaging web experiences that don’t just look good, but feel good to
+                    use. Based in sunny California, USA, I’m <span id="age"></span> years old and already deep in the
+                    game of turning lines
+                    of code into digital magic.
+
+                    Don’t worry about my age — I’m doing just fine (and yes, I did build this site myself!). I’m always
+                    exploring new technologies and love pushing the boundaries of what’s possible on the web. Thanks for
+                    stopping by, and I hope you enjoy the site as much as I enjoyed building it!
+
+                </p>
+                <p class="miniText">Feel free to explore the site — you might just stumble across a few hidden gems
+                    along the way!</p>
             </div>
             <div class="buttons">
-                <a class="button pointer-hover">About Me</a>
-                <a class="button pointer-hover">Projects</a>
+                <a class="button pointer-hover light-bg-hover">About Me</a>
+                <a class="button pointer-hover light-bg-hover">Projects</a>
             </div>
             <div class="SiteVersionCenter">
                 <div class="siteVersion">
                     <div class="siteVersionText">
                         <div class="siteVersionHeader">
-                            <h1>Site Updates</h1>
-                            <p class="version">version 1</p>
+                            <h1 class="light-bg-hover">Site Updates</h1>
+                            <p class="version">alpha</p>
                         </div>
-                        <p>Site has gone public! What you're seeing is version one</p>
+                        <p>Still in alpha, my current site is <a class="currentSite pointer-hover" href="https://www.daymian.xyz" target="_blank">here</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="footer">
             <div class="footerRow">
-                <h3>Contact</h3>
+                <h3 class="light-bg-hover">Contact</h3>
                 <p>Email: business@daymian.xyz</p>
             </div>
             <div class="footerRow">
-                <h3>Portfolio</h3>
-                <p class="portfolioLink"><a class="pointer-hover" href="https://twitter.com/daymianjmv" target="_blank">Twitter</a></p>
-                <p class="portfolioLink"><a class="pointer-hover" href="https://github.com/daymianjmv" target="_blank">GitHub</a></p>
+                <h3 class="light-bg-hover">Portfolio</h3>
+                <p class="portfolioLink"><a class="pointer-hover" href="#"
+                        target="_blank">Page</a></p>
+                <p class="portfolioLink"><a class="pointer-hover" href="#"
+                        target="_blank">Page</a></p>
             </div>
             <div class="footerRow">
-                <h3>About Me</h3>
-                <p>Website designed and developed by Daymian JMV</p>
-                <p>© 2023 Daymian JMV. All rights reserved.</p>
+                <h3 class="light-bg-hover">About Me</h3>
+                <p class="portfolioLink"><a class="pointer-hover" href="#"
+                    target="_blank">Page</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="#"
+                    target="_blank">Page</a></p>
+        </div>
             </div>
 
             <div class="footerRow socials">
-                <a class="pointer-hover" href="https://www.daymian.xyz"><img src="/imgs/icons/globe.svg"></a>
-                <a class="pointer-hover" href="https://github.com/daymianjmv"><img src="/imgs/icons/github.svg"></a>
+                <a class="pointer-hover" href="https://www.daymian.xyz"><img class="social-icon" src="/imgs/icons/globe.svg"></a>
+                <a class="pointer-hover" href="https://github.com/daymianjmv"><img class="social-icon" src="/imgs/icons/github.svg"></a>
+                <a class="pointer-hover" href="https://github.com/d4ym1an"><img class="social-icon" src="/imgs/icons/github2.svg"></a>
+                <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d"><img class="social-icon" src="/imgs/icons/upwork.svg"></a>
+                <a class="pointer-hover" href="www.linkedin.com/in/daymian/"><img class="social-icon" src="/imgs/icons/linkedin.svg"></a>
             </div>
         </div>
     </div>
