--- a/about/index.html
+++ b/about/index.html
@@ -56,9 +56,13 @@
 
     <div class="hover-buttons">
         <div class="button-container">
-            <img src="/imgs/buttons/360_F_336975809_VvYkV1QZX2E8igeS3kYpcBGiMcK6zWpL.jpg" alt="Button 1" class="hover-button">
-            <img src="/imgs/buttons/depositphotos_88120646-stock-photo-idyllic-summer-landscape-with-clear.jpg" alt="Button 2" class="hover-button">
-            <img src="/imgs/buttons/sun-sets-behind-mountain-ranges-600nw-2479236003.webp" alt="Button 3" class="hover-button">
+            <div class="buttonOneSpacing">
+                <a alt="Button 1" class="b1 hover-button pointer-hover">A & A</a>
+            </div>
+            <div class="buttonTwoSpacing">
+                <a alt="Button 2" class="b2 hover-button pointer-hover">HOBBIES</a>
+                <a alt="Button 3" class="b3 hover-button pointer-hover">POST SECONDARY PLAN</a>
+            </div>
         </div>
     </div>
 
@@ -84,8 +88,8 @@
                     src="/imgs/icons/github.svg"></a>
             <a class="pointer-hover" href="https://github.com/d4ym1an" target="_blank"><img class="social-icon"
                     src="/imgs/icons/github2.svg"></a>
-            <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d"
-                target="_blank"><img class="social-icon" src="/imgs/icons/upwork.svg"></a>
+            <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
+                    class="social-icon" src="/imgs/icons/upwork.svg"></a>
             <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
                     class="social-icon" src="/imgs/icons/linkedin.svg"></a>
         </div>
