--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     along the way!</p>
             </div>
             <div class="buttons">
-                <a class="button pointer-hover light-bg-hover">About Me</a>
+                <a class="button pointer-hover light-bg-hover" href="/about/index.html">About Me</a>
                 <a class="button pointer-hover light-bg-hover">Projects</a>
             </div>
             <div class="SiteVersionCenter">
