--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
     <div class="hover-buttons">
         <div class="button-container">
             <div class="buttonOneSpacing">
-                <a alt="Button 1" class="b1 hover-button pointer-hover">A & A</a>
+                <a alt="Button 1" class="b1 hover-button pointer-hover">ACHIEVEMENTS & AWARDS</a>
             </div>
             <div class="buttonTwoSpacing">
                 <a alt="Button 2" class="b2 hover-button pointer-hover">HOBBIES</a>
