Finish About Me Index

--- a/about/index.html
+++ b/about/index.html
@@ -53,11 +53,11 @@
             <p>Let’s connect and turn your idea into something beautiful ✨</p>
         </div>
     </div>
-
+<div class="hover-buttonsBackground">
     <div class="hover-buttons">
         <div class="button-container">
             <div class="buttonOneSpacing">
-                <a alt="Button 1" class="b1 hover-button pointer-hover">ACHIEVEMENTS & AWARDS</a>
+                <a alt="Button 1" class="b1 hover-button pointer-hover" href="/about/a&a/index.html">ACHIEVEMENTS & AWARDS</a>
             </div>
             <div class="buttonTwoSpacing">
                 <a alt="Button 2" class="b2 hover-button pointer-hover">HOBBIES</a>
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <div class="footer">
         <div class="footerRow">
             <h3 class="light-bg-hover">Contact</h3>
