--- a/about/a&a/index.html
+++ b/about/a&a/index.html
@@ -1,24 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>daymian // awards and achivements</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="sidebar" class="sidebar">
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
-        <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me<br> <span>you're already
-                here!</span></a>
-        <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
-        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me
+            <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
+            <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
-    <footer>
+    <div class="header" id="top">
+        <h1>Achievements & Awards</h1>
+    </div>
+    <div class="awardsMain">
+        <div class="awardsText">
+            <h1>Awards</h1>
+            <ul>
+                <li>N/A</li>
+                <li>N/A</li>
+                <li>N/A</li>
+            </ul>
+        </div>
+        <div class="awardsImgs">
+            <img class="awardsImg" src="/imgs/PLACEHOLDER.png" alt="award image">
+        </div>
+    </div>
 
-    </footer>
+    <div class="headerTwo"></div>
+
+    <div class="achievementsMain">
+        <div class="achievementsText">
+            <h1>Achievements</h1>
+            <ul>
+                <li>N/A</li>
+                <li>N/A</li>
+                <li>N/A</li>
+            </ul>
+        </div>
+        <div class="achievementsImgs">
+            <img class="achievementImg" src="/imgs/PLACEHOLDER.png" alt="achievement image">
+        </div>
+    </div>
+    
+    <div class="footer">
+        <div class="footerRow">
+            <h3 class="light-bg-hover">Contact</h3>
+            <p>Email: business@daymian.xyz</p>
+        </div>
+        <div class="footerRow">
+            <h3 class="light-bg-hover">Portfolio</h3>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/index.html" target="_blank">About ME</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+        </div>
+        <div class="footerRow">
+            <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="#">Page</a></p>
+        </div>
+        <div class="footerRow socials">
+            <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/globe.svg"></a>
+            <a class="pointer-hover" href="https://github.com/daymianjmv" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/github.svg"></a>
+            <a class="pointer-hover" href="https://github.com/d4ym1an" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/github2.svg"></a>
+            <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
+                    class="social-icon" src="/imgs/icons/upwork.svg"></a>
+            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
+                    class="social-icon" src="/imgs/icons/linkedin.svg"></a>
+        </div>
+    </div>
+    <script src="/scripts/cursor.js"></script>
+    <script src="/scripts/sidebar.js"></script>
 </body>
+
 </html>
