started on hobbies page

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
         content="About Daymian J. Madrigal Vasquez - A web developer with a passion for crafting interactive, visually engaging web experiences.">
     <link rel="icon" type="image/png" href="/imgs/djCrownOfThorns.png">
     <title>daymian // about</title>
-    <link rel="stylesheet" href="/about/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body style="cursor: none;">
@@ -53,19 +53,20 @@
             <p>Let’s connect and turn your idea into something beautiful ✨</p>
         </div>
     </div>
-<div class="hover-buttonsBackground">
-    <div class="hover-buttons">
-        <div class="button-container">
-            <div class="buttonOneSpacing">
-                <a alt="Button 1" class="b1 hover-button pointer-hover" href="/about/a&a/index.html">ACHIEVEMENTS & AWARDS</a>
-            </div>
-            <div class="buttonTwoSpacing">
-                <a alt="Button 2" class="b2 hover-button pointer-hover">HOBBIES</a>
-                <a alt="Button 3" class="b3 hover-button pointer-hover">POST SECONDARY PLAN</a>
+    <div class="hover-buttonsBackground">
+        <div class="hover-buttons">
+            <div class="button-container">
+                <div class="buttonOneSpacing pointer-hover">
+                    <a alt="Button 1" class="b1 hover-button pointer-hover" href="/about/a&a/index.html">ACHIEVEMENTS &
+                        AWARDS</a>
+                </div>
+                <div class="buttonTwoSpacing">
+                    <a alt="Button 2" class="b2 hover-button pointer-hover" href="/about/hobbies/index.html">HOBBIES</a>
+                    <a alt="Button 3" class="b3 hover-button pointer-hover">POST SECONDARY PLAN</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
     <div class="footer">
         <div class="footerRow">
             <h3 class="light-bg-hover">Contact</h3>
